Fix overriden z-index

--- a/src/Pim/Bundle/UIBundle/Resources/public/css/pim.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/css/pim.less
@@ -417,7 +417,7 @@ div.btn-group > .has-switch {
   float: right;
 }
 
-#lbImage {
+#lbCenter {
   z-index: 1000;
 }
 
